--- a/p1.html
+++ b/p1.html
@@ -31,6 +31,7 @@
                         <!--MENU-->
             
                         <li  id="active" href="Pagina1.html">
+                        <h1>hola mundo</h1>
 				<a href="Pagina3.html">pagina3</a>
 				<a href="Pagina2.html">pagina4</a>
                             <img id="icono" alt="icono proxmox del menu" src="../RECURSOS/Proxmox.png">                            
